k8s/20-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: communityplatform
spec:
  replicas: 1
  selector:
    matchLabels: { app: api }
  template:
    metadata:
      labels: { app: api }
    spec:
      containers:
        - name: api
          image: communityplatform-api:v4
          #image: ghcr.io/BetterUX1/communityplatform-api:latest -- CI/CD build not working yet
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

          volumeMounts:
            - name: uploads
              mountPath: /data/uploads

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: api-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: communityplatform
spec:
  selector: { app: api }
  ports:
    - name: http
      port: 3000
      targetPort: 3000
