k8s/30-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: communityplatform
spec:
  replicas: 1
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: communityplatform-web:latest
          # image: ghcr.io/BetterUX1/communityplatform-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: communityplatform
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
